[gd_scene format=3 uid="uid://c581f8ukk5lgo"]

[ext_resource type="Script" uid="uid://dhy8g354k18dh" path="res://Scripts/misionfallida.gd" id="1_opspj"]
[ext_resource type="AudioStream" uid="uid://dx8rucdunm3do" path="res://Sounds/complete.wav" id="2_o1uvq"]
[ext_resource type="Texture2D" uid="uid://3em6nv3pxml6" path="res://Detallesf/misionf.png" id="2_t4ryu"]
[ext_resource type="FontFile" uid="uid://cgv6ivbx2usab" path="res://Fuentes/dogica/TTF/dogicapixelbold.ttf" id="3_fl284"]
[ext_resource type="FontFile" uid="uid://b7mtyx0310bsa" path="res://Fuentes/dogica/TTF/dogicapixel.ttf" id="4_dae75"]
[ext_resource type="Texture2D" uid="uid://b3rq3g6ng3vn0" path="res://Icono/iconov.png" id="5_7ikvd"]
[ext_resource type="Texture2D" uid="uid://c6026bdnis2og" path="res://Icono/home.png" id="6_7ikvd"]
[ext_resource type="AudioStream" uid="uid://c7yregjerupmc" path="res://Sounds/game-over-417465.mp3" id="7_dae75"]
[ext_resource type="Texture2D" uid="uid://co7sp2k8lfmgy" path="res://Assets/Background/suelomuerte.png" id="9_7ikvd"]
[ext_resource type="Texture2D" uid="uid://dncuitfxjy7ng" path="res://Assets/Coins_16x16/PNG/Coin_One.png" id="9_80bml"]
[ext_resource type="Texture2D" uid="uid://i0l0ishmf0qh" path="res://Assets/Background/sueloo.png" id="10_7ikvd"]
[ext_resource type="Texture2D" uid="uid://huemn6fs8kn0" path="res://Assets/Background/fondogris.png" id="11_7ikvd"]
[ext_resource type="AudioStream" uid="uid://k4gdavo25o5a" path="res://Sounds/click.wav" id="13_5iqhi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_k3bf4"]
atlas = ExtResource("9_80bml")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ikvd"]
atlas = ExtResource("9_80bml")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5iqhi"]
atlas = ExtResource("9_80bml")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjeh3"]
atlas = ExtResource("9_80bml")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_shps0"]
atlas = ExtResource("9_80bml")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hl7j"]
atlas = ExtResource("9_80bml")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_27lni"]
atlas = ExtResource("9_80bml")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6plj"]
atlas = ExtResource("9_80bml")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tva0q"]
atlas = ExtResource("9_80bml")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pvbx"]
atlas = ExtResource("9_80bml")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jc4o"]
atlas = ExtResource("9_80bml")
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tclv6"]
atlas = ExtResource("9_80bml")
region = Rect2(176, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_qqcc8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3bf4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ikvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5iqhi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjeh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shps0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hl7j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27lni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6plj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tva0q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pvbx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jc4o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tclv6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_qrfpl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_84o0k"]
resource_name = "mision"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_xjrh6"]
resource_name = "mostrar_textos"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xjrh6"]
_data = {
&"RESET": SubResource("Animation_qrfpl"),
&"mision": SubResource("Animation_84o0k"),
&"mostrar_textos": SubResource("Animation_xjrh6")
}

[node name="CanvasLayer" type="CanvasLayer" unique_id=363863865]
script = ExtResource("1_opspj")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=267079568]
position = Vector2(679, 360.99997)
scale = Vector2(0.9153645, 0.72851557)
texture = ExtResource("2_t4ryu")

[node name="LabelTitulo" type="Label" parent="." unique_id=619101170]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -759.0
offset_top = -333.0
offset_right = 769.5
offset_bottom = -254.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_fl284")
theme_override_font_sizes/font_size = 70
text = "          MISION  COMPLETADA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelTexto" type="Label" parent="." unique_id=1581067066]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.5
offset_top = -199.0
offset_right = 450.5
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.019607844, 0.019607844, 1)
theme_override_fonts/font = ExtResource("4_dae75")
theme_override_font_sizes/font_size = 60
text = "  Mision Completada
"

[node name="Button" type="Button" parent="." unique_id=2066063597]
offset_left = 864.0
offset_top = 294.0
offset_right = 1067.0
offset_bottom = 501.0
theme_override_colors/icon_pressed_color = Color(0.95, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(1, 0, 0, 1)
icon = ExtResource("5_7ikvd")
expand_icon = true

[node name="Button2" type="Button" parent="." unique_id=2042870365]
offset_left = 338.0
offset_top = 279.0
offset_right = 551.0
offset_bottom = 501.0
theme_override_colors/icon_pressed_color = Color(0.95, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(1, 0, 0, 1)
icon = ExtResource("6_7ikvd")
expand_icon = true

[node name="SonidoMision" type="AudioStreamPlayer" parent="." unique_id=1902076452]
stream = ExtResource("2_o1uvq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=137118330]
position = Vector2(101, 50)
scale = Vector2(5.125, 3.375)
sprite_frames = SubResource("SpriteFrames_qqcc8")
autoplay = "default"

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="." unique_id=482012068]
position = Vector2(1248, 49)
scale = Vector2(5.125, 3.375)
sprite_frames = SubResource("SpriteFrames_qqcc8")
autoplay = "default"

[node name="Suelomuerte" type="Sprite2D" parent="." unique_id=916788547]
position = Vector2(736, 754.5)
scale = Vector2(1, 0.6982422)
texture = ExtResource("9_7ikvd")

[node name="Caido" type="Sprite2D" parent="." unique_id=931920485]
position = Vector2(676, 494)
scale = Vector2(0.6226934, 0.4315234)
texture = ExtResource("10_7ikvd")

[node name="Sprite2D2" type="Sprite2D" parent="." unique_id=540339226]
visible = false
position = Vector2(708, 372)
scale = Vector2(1.7304688, 1)
texture = ExtResource("11_7ikvd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D2" unique_id=324700871]
root_node = NodePath("../../Sprite2D")
libraries/ = SubResource("AnimationLibrary_xjrh6")
autoplay = &"mision"

[node name="SonidoMisionF" type="AudioStreamPlayer" parent="." unique_id=1766815745]
stream = ExtResource("7_dae75")

[node name="Audio" type="AudioStreamPlayer" parent="." unique_id=577095762]
stream = ExtResource("13_5iqhi")
volume_db = 13.193

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
